# Project-Summit.Grid

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  build.py  bundle.py  config-msvc.cmd  config.cmd  doc.cfg
bundle/: bundle.py  grid-pkg.nsi
cmake/: Config.cmake.in  bundle.cmake.in  c_cpp_properties.json.in  compiler.cmake  cpack.cmake  dependencies.cmake  doc.cmake  ide.cmake  install.cmake  licenses.cmake  options.cmake  packages.cmake  src.cmake  unit_test.cmake  version.cmake
cmake/lx/: bundle.cmake.in  exe.sh.in
cmake/src/: __template.cmake
cmake/src/Example/app/: __template.cmake
cmake/src/summit/: format.cmake
cmake/src/summit/app/: __template.cmake  grid.cmake  light_mean.cmake
cmake/src/summit/config/: __template.cmake  cell_fov.cmake
cmake/src/summit/grid/: logger.cmake
cmake/unit_test/: __template.cmake
doc/: algorithm.md  chip-directory-spliter-spec.html  chip-directory-spliter-spec.md  command-line.md  doxygen.sty  header.tex  incorrect-micron-to-pixel-rate-in-chiplog.md  index.md  input-spec.md  manual-gridding.md  modify-markertype-in-exist-chiplog.md  output-spec.md  result-spec.md  summit-grid.css  trouble-shooting.md
include/Example/: version.h
include/summit/: utils.h  version.h
include/summit/app/: light_mean.hpp
include/summit/app/grid/: aruco_setter.hpp  background_writer.hpp  channel_not_found.hpp  chip_props.hpp  chipscan.hpp  denoise_mk_append.hpp  (+27 more)
include/summit/config/: aruco_db.hpp  cell_fov.hpp  chip.hpp  path.hpp
include/summit/exception/: analysis_skip.hpp  chip_spec_not_found.hpp  debug_throw.hpp  rfid_parse_fail.hpp
include/summit/format/: cfu_array.hpp  cfu_array_impl.hpp  csv_out.hpp  rfid.hpp
include/summit/grid/: channel_not_found.hpp  chipscan.hpp  empty_chip_type.hpp  filter.hpp  image_qc_fail.hpp  logger.hpp  main.hpp  reg_mat_mk_index.hpp  single.hpp  spec.txt  task.hpp  task_proc.hpp  unknown_chip_log.hpp  utils.hpp  version.hpp
include/summit/utils/: datetime.hpp
src/Example/app/: hello_world.cpp
src/script/: chiplogfix.bat  light_mean_banff_AM1.bat  light_mean_banff_AM1E.bat  light_mean_banff_AM3.bat  light_mean_banff_CY3.bat  light_mean_banff_CY5.bat  light_mean_yz01_AM1.bat  light_mean_yz01_AM1E.bat  light_mean_yz01_AM3.bat  light_mean_yz01_AM5B.bat  summit-grid-run.bat
src/script/chiplogfix/: README.md  chiplogfix.py  recoverbackup.py
src/summit/: format.cpp  grid.cpp  utils.cpp
src/summit/app/: grid.cpp  grid2.cpp  light_mean.cpp  ocl_device_detector.cpp
src/summit/config/: aruco_db.cpp  cell_fov.cpp  chip.cpp  path.cpp
(+115 files in other folders)
